# service_analisdor_clientes

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
src/: service.py
src/adapter/: kafka.py
src/config/: configs.py  docker-compose.yml
src/controller/: consumer_cadastros.py  consumer_fila_pedidos.py  processamento_pedidos.py  training_model.py
src/controllers/: kafka.py  users.py
src/data/: models.py
src/entity/: __init__.py  cliente.py  dados_modelos.py  fila.py  modelos.py  models.py  orm.py
src/entity/dto/: dto_cliente.py  dto_dados_modelo.py  dto_fila.py  dto_modelos.py
src/security/: security.py
tests/: conftest.py  test_security.py
