[tool.poetry]
name = "service-analisador-cliente"
version = "0.1.0"
description = ""
authors = ["kaue otto <kaueottoclash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blue = "^0.9.1"
isort = "^5.13.2"
sqlalchemy = "^2.0.32"
flask = "^3.0.3"
pyjwt = "^2.9.0"
kafka = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
