[tool.poetry]
name = "service-analisador-cliente"
version = "0.1.0"
description = ""
authors = ["kaue otto <kaueottoclash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blue = "^0.9.1"
isort = "^5.13.2"
sqlalchemy = "^2.0.32"
flask = "^3.0.3"
pyjwt = "^2.9.0"
lime = "^0.2.0.1"
kafka-python = "^2.0.2"
pandas = "^2.2.3"
flask-cors = "^5.0.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
